[package]
name = "smp"
version = "0.1.0"
authors = ["Teo <teodor@dahlknutsen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codes = { git = "https://github.com/teo8192/codes.git", branch = "master" }
rusqlite = "0.24"
structopt = "0.3"
openssl = "0.10"
